# inspire-api

./: .gitignore  LICENSE  MIGRATION.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml
examples/: action_sequences.py  modbus_basic.py  serial_basic.py  tactile_sensors.py
inspire_api/: __init__.py  base.py  constants.py  exceptions.py  modbus.py  registers.py  serial.py  types.py  utils.py
scripts/: pressure_test_serial.py
tests/: conftest.py  test_modbus.py  test_serial.py
